# Orgonomicon-free

./: .gitignore  README.md  install.ps1  production-manifest.json  requirements-production.txt
app/llm/: .gitignore  Dockerfile  pyproject.toml  render.yaml
app/llm/data/: user_directives.db
app/llm/ollama/: init-ollama.sh
app/llm/production_adapters/deepseek-coder-v2-lora/: tokenizer_config.json
app/llm/production_adapters/orgonomicon-lora/: tokenizer.json  training_meta.json
app/llm/scripts/: ingest_books.ps1
app/llm/src/training/: manifest.json  migration.json  requirements-huggingface.txt
app/llm/src/training/assistant/: 033-as-luzes-devem-acompanhar-a-musica.json  034-parar-sincronizacao-das-luzes-com-musica.json
app/llm/src/training/assistant/_shared/: variables.json
app/llm/src/training/datasets/: assistant.jsonl  beta_reasoning_hardening.jsonl  booksmith.jsonl  claude_like.jsonl  code_architecture.jsonl  debugger.jsonl  developer.jsonl  process_reasoning_quality.jsonl  web_designer.jsonl
app/llm/src/training/evals/: eval_spec.json
app/llm/src/training/finetune/: Dockerfile  lora_config.json  lora_config_deepseek_coder_v2.json  setup_wsl2.sh
app/llm/src/training/finetune/data/: deepseek_coder_sft.jsonl  orgonomicon_sft.jsonl  (+2 more)
app/llm/src/training/goresolve/: 001-criar-agendamento-de-despesa-com-data-relativa.json  002-confirmar-agendamento-com-json-final.json
app/llm/src/training/profiles/: assistant.json  booksmith.json  claude_like.json  debugger.json  developer.json  web_designer.json
app/llm/src/training/routing/: profile_router.json
(+42 files in other folders)
